Changed isBlank() to be compatible with Java 8